refactor(validation): improve required text chech to trim whitespace